# databend-serde

./: Cargo.toml  readme.md
my-serde/src/serde_derive/: mod.rs
src/: main.rs
task-one/my-serde/: Cargo.toml
task-one/my-serde/src/: lib.rs
task-one/my-serde/src/serde_std/: mod.rs
task-two/: Cargo.toml
task-two/src/: main.rs
