[package]
edition = "2021"
name = "task-one"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# hello = {path = "hello"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
# utils = {path = "utils", version = "0.1.0"}
myserde = {path = "my-serde"}
